--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,14 +1,7 @@
-on init
-    setprop sys.usb.configfs 1
-    setprop sys.usb.ffs.aio_compat 1
-    chown system system /sys/bus/platform/drivers/mtk-kpd/kpd_long_press_is_reboot
-    # write  /sys/bus/platform/drivers/mtk-kpd/kpd_long_press_is_reboot 0
+import /init.microtrust.rc
 
-on fs && property:ro.debuggable=0
-    # distinguish USB shoulde connect or not, i.e. CDP vs SDP
-    # write /sys/class/udc/musb-hdrc/device/cmode 2
-    # set charging free due to it wait for USB activation
-    start adbd
+on init
+    export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
 
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
@@ -18,3 +11,5 @@ on post-fs
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+
+    install_keyring
