--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -10,7 +10,57 @@ on post-fs
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
+    install_keyring
+
+    service mtk_plpath_utils.link /system/bin/mtk_plpath_utils
+    class main
+    user root
+    group root system
+    disabled
+    oneshoot
+    seclabel u:r:recovery:s0
+
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk_plpath_utils.link
-    
-    install_keyring
+
+    # Gatekeeper
+    service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
+    interface android.hardware.gatekeeper@1.0::IGatekeeper default
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+    # Keymaster
+    service keymaster-4-1 /system/bin/android.hardware.keymaster@4.1-service.beanpod
+    interface android.hardware.keymaster@4.0::IKeymasterDevice default
+    interface android.hardware.keymaster@4.1::IKeymasterDevice default
+    user root
+    group root drmpc
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
+    on property:vendor.sys.listener.registered=true
+    start gatekeeper-1-0
+    start keymaster-4-1
+
+    on property:ro.crypto.state=unsupported
+    stop teei_daemon
+    stop keymaster-4-1
+    stop gatekeeper-1-0
+
+    on property:ro.crypto.state=unencrypted
+    stop teei_daemon
+    stop keymaster-4-1
+    stop gatekeeper-1-0
+
+    on property:twrp.all.users.decrypted=true
+    stop teei_daemon
+    stop keymaster-4-1
+    stop gatekeeper-1-0
+
+on boot
+    start boot-hal-1-2
+    start health-hal-2-1
+
